added integration tests. Lots of bugfixes and refactoring..